--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Analyst &amp; Software Developer.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -110,8 +107,7 @@
                 </ul>
               </div>
             </div>
-            <p> Ameer Adeigbe is a multi-talented professional with expertise in software development, data analysis, and freelance graphics design. With years of experience in these fields, Ameer has honed his skills and gained a reputation as a skilled and reliable expert. He is dedicated to delivering high-quality work that exceeds client expectations and is known for his ability to work well under pressure. With his diverse skillset and passion for technology and design, Ameer is a valuable asset to any project or team.</p>
-          </div>
+                      </div>
         </div>
 
       </div>
@@ -123,7 +119,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am an experienced software developer, data analyst, and graphics designer with a proven track record of delivering successful projects. I build robust software solutions, extract valuable insights from complex data sets, and design visually stunning graphics. My work has earned me a reputation as a skilled and reliable professional who delivers high-quality results.</p>
         </div>
 
         <div class="row no-gutters">
@@ -171,7 +167,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I have a diverse skillset and proven expertise in software development, data analysis, graphics design, and web development technologies. I am proficient in programming languages such as Python and Arduino C++, data analysis tools like SQL, Tableau, and Power BI, and graphics design software such as Adobe Photoshop, Illustrator, and InDesign. I am also skilled in web development technologies such as HTML, CSS, and JavaScript. With my ability to manage projects from inception to completion, I am a valuable asset to any team or project.</p>
         </div>
 
         <div class="row skills-content">
@@ -198,6 +194,14 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            
+            <div class="progress">
+              <span class="skill">Arduino C <i class="val">65%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
             <div class="progress">
               <span class="skill">CorelDraw <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
@@ -260,7 +264,7 @@
               <h4>BSc Computer Science</h4>
               <h5>2022 - 2023</h5>
               <p><em>Edexcel University, Benine</em></p>
-              <p>Graduated with a  Upper Credit (Second-Class upper)</p>
+              <p>In-view</p>
             </div>
             <div class="resume-item">
               <h4>Higher Natonal Diploma (HND)</h4>
@@ -462,28 +466,28 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+            <div class="icon"><i class="bx bx-desktop"></i></div>
+            <h4 class="title"><a href="">Software Development</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
+            <div class="icon"><i class="bi bi-robot"></i></div>
+            <h4 class="title"><a href="">IOT & Mechatronics</a></h4>
             <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+            <div class="icon"><i class="bi bi-cursor"></i></div>
+            <h4 class="title"><a href="">Graphics Design</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
+            <div class="icon"><i class="bx bx-user"></i></div>
+            <h4 class="title"><a href="">Technical consulting and project management</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
+            <div class="icon"><i class="bx bx-data"></i></div>
+            <h4 class="title"><a href="">Database Management and Optimization</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
