--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Ameer Adeigbe A.</h1>
+   
+      <h1>Ameer Adeigbe A.</h1></p>
       <p>I'm a <span class="typed" data-typed-items="Software Developer, Data Analyst, Freelancer, Designer"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -309,7 +310,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>MECHATRONICS & IOT INTERN</h4>
+              <h4>MECHATRONICS & IoT INTERN</h4>
               <h5>2020 - Present</h5>
               <p><em>Technotrics Systems, Nigeria. </em></p>
               <ul>
@@ -351,7 +352,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Graphic Designs</li>
-              <li data-filter=".filter-card">MECHATRONICS &amp; IOT</li>
+              <li data-filter=".filter-card">MECHATRONICS &amp; IoT</li>
               <li data-filter=".filter-web">Web Design</li>
             </ul>
           </div>
@@ -461,40 +462,41 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Looking for a versatile professional to take your business to the next level? Check out the services I offer below, including software development, website design, and more. Keep scrolling to learn more!</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bx-desktop"></i></div>
-            <h4 class="title"><a href="">Software Development</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="#">Software Development</a></h4>
+            <p class="description">I can develop custom software solutions that meet your specific needs and requirements, whether it's a desktop application, a web-based solution, or a mobile app.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-robot"></i></div>
-            <h4 class="title"><a href="">IOT & Mechatronics</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <h4 class="title"><a href="#">Mechatronics &amp; IoT</a></h4>
+            <p class="description">I can design and develop IoT and mechatronics solutions, using sensors, microcontrollers, and other technologies to create smart, automated systems for your business or home.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-cursor"></i></div>
-            <h4 class="title"><a href="">Graphics Design</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="#">Graphics Design</a></h4>
+            <p class="description">I can design creative and visually appealing graphics for various mediums such as print, web, social media, and advertising.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bx bx-user"></i></div>
-            <h4 class="title"><a href="">Technical consulting and project management</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bx bx-data"></i></div>
-            <h4 class="title"><a href="">Database Management and Optimization</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <h4 class="title"><a href="#">Website & Mobile  Development</a></h4>
+            <p class="description"> I can design and develop visually stunning, responsive websites and mobile applications that are tailored to your brand and business needs, using web development technologies such as HTML, CSS, and JavaScript.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <div class="icon"><i class="bx bx-abacus"></i></div>
+            <h4 class="title"><a href="#">Data Analysis</a></h4>
+            <p class="description">I can help you extract valuable insights from your data using a variety of tools and techniques such as SQL, Python, and Tableau, providing you with actionable insights to inform your business decisions.</p>
           </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="bx bx-analyse"></i></div>
+            <h4 class="title"><a href="#">Technical consulting and project management</a></h4>
+            <p class="description">I can provide technical consulting and project management services to help you plan, design, and execute your technology projects effectively.</p>
+          </div> 
+          
         </div>
 
       </div>
@@ -506,7 +508,7 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here are a few testimonies from some of my clients</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -520,8 +522,8 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Malik Olajuwon</h3>
+                <h4>Ceo &amp; Founder Malik Nails</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -533,8 +535,8 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Idris</h3>
+                <h4>ceo Mela Chops</h4>
               </div>
             </div><!-- End testimonial item -->
 
